[gd_scene load_steps=6 format=3 uid="uid://dax60lamump8a"]

[ext_resource type="Script" path="res://scenes/mechs/avian_mech.gd" id="1_kvhce"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hf4g8"]
radius = 2.0
height = 6.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_wy1rf"]
albedo_color = Color(0.552941, 0, 0.00784314, 1)

[sub_resource type="BoxMesh" id="BoxMesh_1kirf"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_c315y"]
radius = 2.0
height = 6.0

[node name="Avian" type="CharacterBody3D"]
script = ExtResource("1_kvhce")

[node name="Body" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_hf4g8")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
agent_height_offset = -2.5

[node name="Gimbal" type="Node3D" parent="."]

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Gimbal"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2, 1, 0)
layers = 4
material_override = SubResource("StandardMaterial3D_wy1rf")
mesh = SubResource("BoxMesh_1kirf")
skeleton = NodePath("../..")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Gimbal"]
layers = 4
mesh = SubResource("CapsuleMesh_c315y")
skeleton = NodePath("../..")

[node name="Eyes" type="Camera3D" parent="Gimbal"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0, 1, 0)
cull_mask = 1048571
fov = 90.0
far = 50.0

[node name="EyesCheck" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="DebugStateLabel" type="Label3D" parent="."]
transform = Transform3D(0.25, 0, 0, 0, 0.25, 0, 0, 0, 0.25, 0, 4, 0)
visible = false
billboard = 1
no_depth_test = true
fixed_size = true
text = "dasd"

[node name="IdleTimer" type="Timer" parent="."]
one_shot = true
